--- a/src/scss/pages/contact.scss
+++ b/src/scss/pages/contact.scss
@@ -53,7 +53,7 @@
   margin: 0;
   font-weight: normal;
   font-family: 'Anybody-ExtraBold';
-  font-size: 20vh;
+  font-size: 11vw;
   margin: 0 0.15em;
   letter-spacing: 3px;
   text-decoration: none;
