--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a {
 }
 
 section {
-  margin: 0 1em;
+  margin: 0 2em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,12 +84,20 @@ a:hover::before {
   margin-top: 2.5em;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .links {
     flex-direction: column;
   }
 
   .links a {
     margin: 0.3em 0;
+  }
+
+  a:hover {
+    color: inherit;
+  }
+
+  a::before {
+    display: none;
   }
 }
