--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -34,4 +34,20 @@
   &:visited {
     color: var(--heading-color);
   }
+
+  &::before {
+    content: '';
+    position: absolute;
+    background-color: rgba(53, 53, 53, 0.15);
+    width: 100%;
+    height: 100%;
+    transform: scaleX(0%);
+    transform-origin: right;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  &:hover::before {
+    transform: scaleX(100%);
+    transform-origin: left;
+  }
 }
