--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -18,8 +18,26 @@
 }
 
 .navbar__link {
+  @include font('AvenirNext');
+
   text-decoration: none;
   color: #000;
+  position: relative;
+  overflow: hidden;
 
-  @include font('AvenirNext');
+  &::before {
+    content: '';
+    position: absolute;
+    background-color: rgba(53, 53, 53, 0.15);
+    width: 100%;
+    height: 100%;
+    transform: scaleX(0%);
+    transform-origin: right;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  &:hover::before {
+    transform: scaleX(100%);
+    transform-origin: left;
+  }
 }
