--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -21,7 +21,7 @@
   @include font('AvenirNext');
 
   text-decoration: none;
-  color: #000;
+  color: var(--text-color);
   position: relative;
   overflow: hidden;
 
