--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -1,6 +1,7 @@
 @import '../mixins/breakpoints';
 @import '../mixins/height';
 @import '../mixins/fonts';
+@import '../mixins/colors';
 
 section {
   margin: 0 15%;
@@ -59,7 +60,7 @@ section {
 .content__about-header {
   font-size: 1.5em;
   margin: 0;
-  color: var(--heading-color);
+  color: $heading-color;
 
   @include font('AvenirNext-Bold');
 
@@ -72,7 +73,7 @@ section {
   font-size: 0.9em;
   line-height: 1.8;
   margin-bottom: 0;
-  color: var(--text-color);
+  color: $text-color;
 
   @include breakpoint(lg) {
     font-size: 1em;
@@ -81,6 +82,6 @@ section {
 
 .content__link {
   text-decoration: none;
-  color: var(--text-color);
+  color: $text-color;
   background-color: rgba(0, 0, 255, 0.15);
 }
