--- a/src/scss/components/project-info.scss
+++ b/src/scss/components/project-info.scss
@@ -1,6 +1,7 @@
 @import '../mixins/fonts';
 @import '../mixins/breakpoints';
 @import '../mixins/height';
+@import '../mixins/colors';
 
 .root {
   @include font('AvenirNext');
@@ -23,7 +24,7 @@
     font-size: 10vw;
     margin: 1.7em 0 0 0;
     cursor: default;
-    color: var(--heading-color);
+    color: $heading-color;
 
     @include font('Montserrat');
 
@@ -66,6 +67,8 @@
 .project-info {
   margin: 0 auto 3em auto;
   width: 85%;
+  z-index: 3;
+  background-color: #fff;
 
   @include breakpoint(sm) {
     margin: 0 auto 5em auto;
@@ -80,7 +83,7 @@
   }
 
   .heading {
-    color: var(--heading-color);
+    color: $heading-color;
     margin: 0 0 1em 0;
     font-size: 1.3em;
     text-align: center;
@@ -94,7 +97,7 @@
 
   .details {
     font-size: 1em;
-    color: var(--text-color);
+    color: $text-color;
     line-height: 188%;
   }
 }
@@ -111,7 +114,7 @@
     text-align: center;
     margin: 1em auto 0 auto;
     text-decoration: none;
-    color: var(--text-color);
+    color: $text-color;
     position: relative;
     font-size: 1em;
 
@@ -141,7 +144,7 @@
   text-align: center;
 
   a {
-    color: var(--heading-color);
+    color: $heading-color;
     text-decoration: none;
     position: relative;
     font-size: 1em;
