--- a/src/scss/components/projects.scss
+++ b/src/scss/components/projects.scss
@@ -1,5 +1,6 @@
 @import '../mixins/height';
 @import '../mixins/fonts';
+@import '../mixins/colors';
 
 // Using custom breakpoints here since the styling
 // for this page is a bit more specific
@@ -44,7 +45,7 @@
 }
 
 .project__title {
-  color: var(--heading-color);
+  color: $heading-color;
   margin-bottom: 16px;
   max-width: 90%;
 
@@ -76,7 +77,7 @@
   margin-top: 0.5em;
   margin-bottom: 1.5em;
   max-width: 90%;
-  color: var(--text-color);
+  color: $text-color;
 
   @include breakpoint(sm) {
     margin-top: 0;
@@ -115,7 +116,7 @@
   $transition: transform 0.25s ease-in-out;
 
   a {
-    color: var(--heading-color);
+    color: $heading-color;
     font-weight: bold;
     text-decoration: none;
     font-size: 0.8em;
@@ -260,7 +261,7 @@
   &::after {
     content: '';
     width: 13px;
-    background-color: var(--heading-color);
+    background-color: $heading-color;
     height: 1px;
     transform-origin: right;
     display: inline-block;
